--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,25 +12,27 @@ categories = ["game-engines", "rendering"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#bevy = { version = "0.4", default-features = false, features = ["render"] }
-bevy = { git = "https://github.com/bevyengine/bevy", branch = "master", default-features = false, features = ["render"] }
-bevy_mod_raycast = { git = "https://github.com/aevyrie/bevy_mod_raycast", branch = "master" }
+#bevy = { version = "0.4" }
+bevy = { git = "https://github.com/bevyengine/bevy", rev = "af6723156782b5579c90b4eac1fa49b1646dbaf5" }
+#bevy = { git = "https://github.com/bevyengine/bevy", branch = "master"}
+#bevy_mod_raycast = { git = "https://github.com/aevyrie/bevy_mod_raycast", rev="24b8ba464be2a936098971c9f6aa6c5738bd4250 }
+bevy_mod_raycast = { path = "../bevy_mod_raycast" }
 
 [features]
 ex = [ "bevy/bevy_wgpu", "bevy/bevy_winit", "bevy/bevy_gltf", "bevy/x11" ]
 
 [[example]]
 name = "3d_scene"
-required-features = [ "ex" ]
+
 
 [[example]]
 name = "events"
-required-features = [ "ex" ]
+
 
 [[example]]
 name = "multiple_windows"
-required-features = [ "ex" ]
+
 
 [[example]]
 name = "stress_test"
-required-features = [ "ex" ]
+
